@@ -3,11 +3,13 @@
 #include "FWCore/ServiceRegistry/interface/ServiceMaker.h"
 #include "IOPool/Streamer/interface/StreamerOutputModule.h"
 #include "EventFilter/Modules/src/FUShmOutputModule.h"
+#include "EventFilter/Modules/src/FUWriterModule.h"
 #include "FWCore/ServiceRegistry/interface/ServiceMaker.h"
 #include "EventFilter/Modules/interface/FUShmDQMOutputService.h"
 #include "EventFilter/Modules/interface/ShmOutputModuleRegistry.h"
 
 typedef edm::StreamerOutputModule<edm::FUShmOutputModule> ShmStreamConsumer;
+typedef edm::StreamerOutputModule<edm::FUWriterModule> FUStreamWriter;
 
 using edm::FUShmOutputModule;
 using namespace edm::serviceregistry;
@@ -18,6 +20,7 @@ typedef ParameterSetMaker<ShmOutputModuleRegistry> maker3;
 
 
 DEFINE_FWK_MODULE(ShmStreamConsumer);
+DEFINE_FWK_MODULE(FUStreamWriter);
 DEFINE_FWK_SERVICE_MAKER(FUShmDQMOutputService,dssMaker);
 DEFINE_FWK_SERVICE_MAKER(ShmOutputModuleRegistry,maker3);
 
