@@ -4,12 +4,11 @@
      the resource broker to send to the Storage Manager.
      See the CMS EvF Storage Manager wiki page for further notes.
 
-   $Id: FUShmOutputModule.cc,v 1.14.2.5 2012/04/22 17:58:09 smorovic Exp $
+   $Id: FUShmOutputModule.cc,v 1.15 2012/05/02 15:02:19 smorovic Exp $
 */
 
 #include "EventFilter/Utilities/interface/i2oEvfMsgs.h"
 
-#include "IOPool/Streamer/interface/EventMessage.h"
 #include "EventFilter/Modules/src/FUShmOutputModule.h"
 #include "DataFormats/Provenance/interface/EventID.h"
 
@@ -52,6 +51,8 @@ namespace edm
     , initBufSize_(0)
     , postponeStart_(false)
     , nExpectedEPs_(0)
+    , numDatasets_(0)
+    , streamId_()
   {
     FDEBUG(9) << "FUShmOutputModule: constructor" << endl;
     if(edm::Service<evf::ShmOutputModuleRegistry>())
@@ -67,8 +68,30 @@ namespace edm
       crc = crc32(crc, buf, guidString.length());
       fuGuidValue_ = crc;
     }
+    datasetsPSet_ = edm::ParameterSet();
+    edm::ParameterSet streamsPSet = edm::ParameterSet();
+
+    try {
+      edm::ParameterSet descriptions = ps.getUntrackedParameter<edm::ParameterSet>("datasetDescriptions",edm::ParameterSet());
+      streamId_ = descriptions.getParameter<std::string>("streamId");
+      if (streamId_.size()) {
+        streamsPSet = descriptions.getParameter<edm::ParameterSet>("streams");
+        Strings streamDatasetList = streamsPSet.getParameter<Strings>(streamId_);
+        datasetsPSet_ = descriptions.getParameter<edm::ParameterSet>("datasets");
+	for (size_t i=0;i<streamDatasetList.size();i++) {
+	  selectedDatasetNames_.push_back(streamDatasetList[i]);
+	  numDatasets_++;
+	}
+      }
+    }
+    catch (...) {
+      //not present:ignore
+      selectedDatasetNames_.clear();
+      datasetsPSet_ = edm::ParameterSet();
+      numDatasets_=0;
+    }
   }
-  
+
   FUShmOutputModule::~FUShmOutputModule()
   {
     FDEBUG(9) << "FUShmOutputModule: FUShmOutputModule destructor" << endl;
@@ -76,8 +99,21 @@ namespace edm
     //shmdt(shmBuffer_);
   }
 
+
+  void FUShmOutputModule::fillDescription(ParameterSetDescription& description)
+  {
+    //description.addUntracked<edm::ParameterSet>("datasetDescriptions",edm::ParameterSet())->setComment("Descriptions of datasets");
+    description.setAllowAnything();
+    //description.addUntracked<edm::ParameterSetDescription>("datasetDescriptions");
+  }
+
+
   void FUShmOutputModule::doOutputHeader(InitMsgBuilder const& initMessage)
   {
+    unsigned char* buffer = (unsigned char*) initMessage.startAddress();
+    unsigned int size = initMessage.size();
+    InitMsgView dummymsg(buffer);
+    parseDatasets(dummymsg);
     //saving message for later if postpone is on
     if (postponeInitMsg_) {
       sentInitMsg_=false;
@@ -98,11 +134,8 @@ namespace edm
       << " No INIT is sent - this is probably fatal!";
     if(shmBuffer_)
     {
-      unsigned char* buffer = (unsigned char*) initMessage.startAddress();
-      unsigned int size = initMessage.size();
       FDEBUG(10) << "writing out INIT message with size = " << size << std::endl;
       // no method in InitMsgBuilder to get the output module id, recast
-      InitMsgView dummymsg(buffer);
       uint32 dmoduleId = dummymsg.outputModuleId();
 
       //bool ret = shmBuffer_->writeRecoInitMsg(dmoduleId, buffer, size);
@@ -164,6 +197,7 @@ namespace edm
       unsigned char* buffer = (unsigned char*) eventMessage.startAddress();
       unsigned int size = eventMessage.size();
       EventMsgView eventView(eventMessage.startAddress());
+      countEventForDatasets(eventView);
       unsigned int runid = eventView.run();
       unsigned int eventid = eventView.event();
       unsigned int outModId = eventView.outModId();
@@ -209,4 +243,32 @@ namespace edm
     }
   }
 
+  void FUShmOutputModule::parseDatasets(InitMsgView const& initMessage)
+  {
+     //reset counter
+     for (size_t i=0;i<datasetCounts_.size();i++) datasetCounts_[i]=0;
+     if (!numDatasets_) return;
+     if (dpEventSelectors_.size()) return;
+     Strings allPaths;
+     initMessage.hltTriggerNames(allPaths);
+     totalPaths_ = allPaths.size();
+     for (size_t i=0;i<numDatasets_;i++)
+     {
+       Strings datasetPaths = datasetsPSet_.getParameter<Strings>(selectedDatasetNames_[i]);
+       dpEventSelectors_.push_back(std::pair<std::string,edm::EventSelector*>(selectedDatasetNames_[i],new edm::EventSelector(datasetPaths,allPaths))); 
+       datasetCounts_.push_back(0);
+     }
+  }
+
+  void FUShmOutputModule::countEventForDatasets(EventMsgView const& eventMessage)
+  {
+    if (!numDatasets_) return;
+    uint8 hlt_out[totalPaths_];
+    eventMessage.hltTriggerBits( hlt_out );
+    for (size_t i=0;i<numDatasets_;i++) {
+      if ( dpEventSelectors_[i].second->acceptEvent( hlt_out, totalPaths_)) {
+	datasetCounts_[i]++;
+      }
+    }
+  }
 }
