@@ -6,11 +6,14 @@
      Header file shared memory to be used with FUShmOutputModule.
      See CMS EvF Storage Manager wiki page for further notes.
 
-   $Id: FUShmOutputModule.h,v 1.8.2.4 2012/04/30 14:38:29 smorovic Exp $
+   $Id: FUShmOutputModule.h,v 1.9 2012/05/02 15:02:19 smorovic Exp $
 */
 
 #include "FWCore/ParameterSet/interface/ParameterSet.h"
+#include "FWCore/ParameterSet/interface/ParameterSetDescription.h"
+#include "FWCore/Framework/interface/EventSelector.h"
 
+#include "IOPool/Streamer/interface/EventMessage.h"
 #include "IOPool/Streamer/interface/InitMsgBuilder.h"
 #include "IOPool/Streamer/interface/EventMsgBuilder.h"
 #include "FWCore/Framework/interface/LuminosityBlock.h"
@@ -52,7 +55,7 @@ struct SM_SharedMemoryHandle
 
 namespace edm
 {
-  class ParameterSetDescription;
+  //class ParameterSetDescription;
   class FUShmOutputModule : public evf::OutputModule
   {
   public:
@@ -67,8 +70,24 @@ namespace edm
     }
     void start();
     void stop();
-    // No parameters.
-    static void fillDescription(ParameterSetDescription&) {}
+    static void fillDescription(ParameterSetDescription&);
+
+    void parseDatasets(InitMsgView const& initMessage);
+    void countEventForDatasets(EventMsgView const& eventMessage);
+    std::vector<std::string> getDatasetNames() {return selectedDatasetNames_;}
+    std::vector<unsigned int>& getDatasetCounts() {return datasetCounts_;}
+    void clearDatasetCounts() {
+	    for (unsigned int i=0;i<datasetCounts_.size();i++) datasetCounts_[i]=0;
+    }
+    std::string getStreamId() {return streamId_;}
+
+    //void writeLuminosityBlock(LuminosityBlockPrincipal const&);
+    void setPostponeInitMsg();
+    void sendPostponedStart();
+    void sendPostponedInitMsg();
+    void setNExpectedEPs(unsigned int EPs);
+    void unregisterFromShm();
+
   private:
 
     evf::FUShmBuffer* shmBuffer_;
@@ -84,14 +103,16 @@ namespace edm
     bool postponeStart_;
     unsigned int nExpectedEPs_;
 
-  public:
-    //void writeLuminosityBlock(LuminosityBlockPrincipal const&);
-    void setPostponeInitMsg();
-    void sendPostponedStart();
-    void sendPostponedInitMsg();
-    void setNExpectedEPs(unsigned int EPs);
-    void unregisterFromShm();
+    //dataset parsing
+    std::vector<unsigned int> datasetCounts_;
 
+    unsigned int numDatasets_;
+    edm::ParameterSet datasetsPSet_; 
+    std::vector<std::string> selectedDatasetNames_;
+    std::vector<std::pair<std::string,edm::EventSelector*>> dpEventSelectors_;
+    unsigned int totalPaths_;
+
+    std::string streamId_;
   };
 }
 
