@@ -1,3 +1,8 @@
+2012-09-02 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V00-08-15
+	* dataset counters in FUShmOutputModule
+
 2012-05-02 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V00-08-14
